--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -1,193 +1,124 @@
 <!doctype html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="img/png" href="favicon.png">
-    
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+   <head>
+      <meta charset="utf-8">
+      <meta name="keywords" content="">
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="shortcut icon" type="img/png" href="favicon.png">
+      <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-	<link href='https://fonts.googleapis.com/css?family=Montserrat&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    
-	<script src="./js/jquery-2.1.0.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/blocs.min.js"></script>
-	<script src="./js/jquery.touchSwipe.min.js" defer></script>
-	<script src="./js/lazysizes.min.js" defer></script>
-    <title>Listings</title>
-
-    
-<!-- Google Analytics -->
- 
-<!-- Google Analytics END -->
-    
-</head>
-<body>
-<!-- Main container -->
-<div class="page-container">
-    
-<!-- bloc-0 -->
-<div class="bloc bgc-davys-grey bg-citysky-overlay b-parallax bloc-bg-texture texture-fabric d-bloc" id="bloc-0">
-	<div class="container bloc-sm">
-		<nav class="navbar row">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/Logo@3x.png" alt="logo" width="50" height="50" />Help Is On The Way</a>
-				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-				</button>
-			</div>
-			<div class="collapse navbar-collapse navbar-1">
-				<ul class="site-navigation nav navbar-nav animated shake-hvr">
-					<li>
-						<a href="log-in.html">Log-In</a>
-					</li>
-					<li>
-						<a href="needs.html">Needs</a>
-					</li>
-					<li>
-						<a href="categories.html">Categories</a>
-					</li>
-					<li>
-						<a href="listings.html">Listings</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</div>
-</div>
-<!-- bloc-0 END -->
-
-<!-- bloc-5 -->
-<div class="bloc bgc-lavender-gray bg-valley bloc-bg-texture texture-darken-strong l-bloc" id="bloc-5">
-	<div class="container bloc-sm">
-		<div class="row">
-			<div class="col-sm-12">
-				<h2 class="text-center mg-clear">
-					Categories
-				</h2>
-			</div>
-		</div>
-		<div class="row voffset">
-			<div class="col-sm-3">
-				<a href="listings.html" data-lightbox="img/Baby.jpg"><img src="img/lazyload-ph.png" data-src="img/Baby.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
-				<h3 class="mg-md">
-					Baby &amp; Toddlers
-				</h3>
-				<p>
-					Baby &amp; kids clothes, toys and other related stuff
-				</p>
-			</div>
-			<div class="col-sm-3">
-				<a href="listings.html"  data-lightbox="img/Books.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Books.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
-				<h3 class="mg-md">
-					Books, DVDs &amp; Games
-				</h3>
-				<p>
-					Kids Books, Movies, games and consoles
-				</p>
-			</div>
-			<div class="col-sm-3">
-				<a href="listings.html" data-lightbox="img/Clothes.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Clothes.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
-				<h3 class="mg-md">
-					Clothes &amp; Footware
-				</h3>
-				<p>
-					Kids and Adult&rsquo;s clothes and footware.
-				</p>
-			</div>
-			<div class="col-sm-3">
-				<a href="listings.html" data-lightbox="img/Computers.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Computers.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
-				<h3 class="mg-md">
-					Computers
-				</h3>
-				<p>
-					Computers, software and learning material
-				</p>
-			</div>
-		</div>
-		<div class="row voffset">
-			<div class="col-sm-3">
-				<a href="listings.html" data-lightbox="img/Furniture.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Furniture.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
-				<h3 class="mg-md">
-					Furniture
-				</h3>
-				<p>
-					Furniture and electric goods
-				</p>
-			</div>
-			<div class="col-sm-3">
-				<a href="listings.html" data-lightbox="img/Musical.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Musical.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
-				<h3 class="mg-md">
-					Musical instruments
-				</h3>
-				<p>
-					Musical instruments and learning material
-				</p>
-			</div>
-			<div class="col-sm-3">
-				<a href="listings.html" data-lightbox="img/Sports.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Sports.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
-				<h3 class="mg-md">
-					Sport goods
-				</h3>
-				<p>
-					Sports items and sports clothes &amp; shoes
-				</p>
-			</div>
-			<div class="col-sm-3">
-				<a href="listings.html"  data-lightbox="img/Help.jpg" data-gallery-id="gallery-1"><img src="img/lazyload-ph.png" data-src="img/Help.jpg" class="img-responsive animated bounce-hvr lazyload" /></a>
-				<h3 class="mg-md">
-					Household Help
-				</h3>
-				<p>
-					All household help - whatever help you want!
-				</p>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- bloc-5 END -->
-
-<!-- ScrollToTop Button -->
-<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
-<!-- ScrollToTop Button END-->
-
-
-<!-- Footer - bloc-8 -->
-<div class="bloc bgc-davys-grey bloc-bg-texture texture-fabric d-bloc" id="bloc-8">
-	<div class="container bloc-lg">
-		<div class="row">
-			<div class="col-sm-3">
-				<h3 class="mg-md bloc-mob-center-text">
-					About
-				</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">The team</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Contact us</a>
-			</div>
-			<div class="col-sm-3">
-				<h3 class="mg-md bloc-mob-center-text">
-					Get the App
-				</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">iPhone</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Android</a>
-			</div>
-			<div class="col-sm-3">
-				<h3 class="mg-md bloc-mob-center-text">
-					Follow Us
-				</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">Twitter</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Facebook</a>
-			</div>
-			<div class="col-sm-3">
-				<h3 class="mg-md bloc-mob-center-text">
-					Company
-				</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">Terms of use</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Privacy</a>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- Footer - bloc-8 END -->
-
-</div>
-<!-- Main container END -->
-    
-
-</body>
+      <link rel="stylesheet" type="text/css" href="./css/animate.min.css">
+      <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+      <link rel="stylesheet" type="text/css" href="./css/feather.min.css">
+      <link href='https://fonts.googleapis.com/css?family=Montserrat&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+      <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+      <script src="./js/jquery-2.1.0.min.js"></script>
+	  
+	  <script src="./js/bootstrap.min.js"></script>
+	  <script src="./js/blocs.min.js"></script>
+	  <script src="./js/lazysizes.min.js" defer></script> 
+      <title>Listings</title>
+      <!-- Google Analytics --> <!-- Google Analytics END --> 
+   </head>
+   <body>
+      <!-- Main container -->
+      <div class="page-container">
+         <!-- bloc-0 -->
+         <div class="bloc l-bloc bgc-dark-jungle-green" id="bloc-0">
+            <div class="container bloc-sm">
+               <nav class="navbar row">
+                  <div class="navbar-header"><a class="navbar-brand" href="index.html"><img src="img/Logo@3x.png" alt="logo" width="50" height="50" />Help Is On The Way.</a><button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
+                  <div class="collapse navbar-collapse navbar-1">
+                     <ul class="site-navigation nav navbar-nav">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="listings.html">Show Listings</a></li>
+                        <li><a href="needs.html">I Have a Need</a></li>
+                        <li><a href="log-out.html">Log Out</a></li>
+                     </ul>
+                  </div>
+               </nav>
+            </div>
+         </div>
+         <!-- bloc-0 END --><!-- bloc-6 -->
+         <div class="bloc bgc-dark-jungle-green d-bloc bloc-bg-texture texture-geometry-shapes" id="bloc-6">
+            <div class="container bloc-sm">
+               <div class="row">
+                  <div class="col-sm-12">
+                     <h2 class="text-center mg-clear">Categories</h2>
+                  </div>
+               </div>
+               <div class="row voffset">
+                  <div class="col-sm-3">
+                     <a href="listings.html"><img src="img/lazyload-ph.png" data-src="img/Baby.jpg" class="img-responsive bounce-hvr animated lazyload" /></a>
+                     <h3 class="mg-md">Baby &amp; Toddlers</h3>
+                     <p>Baby &amp; kids clothes, toys and other related stuff</p>
+                  </div>
+                  <div class="col-sm-3">
+                     <a href="listings.html"><img src="img/lazyload-ph.png" data-src="img/Books.jpg" class="img-responsive bounce-hvr animated lazyload" /></a>
+                     <h3 class="mg-md">Books, DVDs &amp; Games</h3>
+                     <p>Kids Books, Movies, games and consoles</p>
+                  </div>
+                  <div class="col-sm-3">
+                     <a href="listings.html"><img src="img/lazyload-ph.png" data-src="img/Clothes.jpg" class="img-responsive bounce-hvr animated lazyload" /></a>
+                     <h3 class="mg-md">Clothes &amp; Footware</h3>
+                     <p>Kids and Adult&rsquo;s clothes and footware.</p>
+                  </div>
+                  <div class="col-sm-3">
+                     <a href="listings.html"><img src="img/lazyload-ph.png" data-src="img/Computers.jpg" class="img-responsive bounce-hvr animated lazyload" /></a>
+                     <h3 class="mg-md">Computers</h3>
+                     <p>Computers, software and learning material</p>
+                  </div>
+               </div>
+               <div class="row voffset">
+                  <div class="col-sm-3">
+                     <a href="listings.html"><img src="img/lazyload-ph.png" data-src="img/Furniture.jpg" class="img-responsive bounce-hvr animated lazyload" /></a>
+                     <h3 class="mg-md">Furniture</h3>
+                     <p>Furniture and electric goods</p>
+                  </div>
+                  <div class="col-sm-3">
+                     <a href="listings.html"><img src="img/lazyload-ph.png" data-src="img/Musical.jpg" class="img-responsive bounce-hvr animated lazyload" /></a>
+                     <h3 class="mg-md">Musical instruments</h3>
+                     <p>Musical instruments and learning material</p>
+                  </div>
+                  <div class="col-sm-3">
+                     <a href="listings.html"><img src="img/lazyload-ph.png" data-src="img/Sports.jpg" class="img-responsive bounce-hvr animated lazyload" /></a>
+                     <h3 class="mg-md">Sport goods</h3>
+                     <p>Sports items and sports clothes &amp; shoes</p>
+                  </div>
+                  <div class="col-sm-3">
+                     <a href="listings.html"><img src="img/lazyload-ph.png" data-src="img/Help.jpg" class="img-responsive bounce-hvr animated lazyload" /></a>
+                     <h3 class="mg-md">Household Help</h3>
+                     <p>All household help - whatever help you want!</p>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!-- bloc-6 END --><!-- ScrollToTop Button --><a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a><!-- ScrollToTop Button END--><!-- Footer - bloc-17 -->
+         <div class="bloc bloc-bg-texture texture-fabric bgc-dark-jungle-green d-bloc" id="bloc-17">
+            <div class="container bloc-lg">
+               <div class="row">
+                  <div class="col-sm-3">
+                     <h3 class="mg-md bloc-mob-center-text">About</h3>
+                     <a href="our-people.html" class="a-btn a-block bloc-mob-center-text">The team</a><a href="contact-us.html" class="a-btn a-block bloc-mob-center-text">Contact us</a>
+                  </div>
+                  <div class="col-sm-3">
+                     <h3 class="mg-md bloc-mob-center-text">Apps coming soon to</h3>
+                     <a href="index.html" class="a-btn a-block bloc-mob-center-text">iPhone</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Android</a>
+                  </div>
+                  <div class="col-sm-3">
+                     <h3 class="mg-md bloc-mob-center-text">Follow Us</h3>
+                     <a href="https://twitter.com/iamsams" class="a-btn a-block bloc-mob-center-text" target="_blank">Twitter</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Facebook</a>
+                  </div>
+                  <div class="col-sm-3">
+                     <h3 class="mg-md bloc-mob-center-text">Company</h3>
+                     <a href="terms-and-conditions.html" class="a-btn a-block bloc-mob-center-text">Terms of use</a><a href="terms-and-conditions.html" class="a-btn a-block bloc-mob-center-text">Privacy</a>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!-- Footer - bloc-17 END -->
+      </div>
+      <!-- Main container END --> 
+   </body>
 </html>
