--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,8 +11,10 @@
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="stylesheet" type="text/css" href="./css/animate.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+      <link rel="stylesheet" type="text/css" href="./css/feather.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    
+          <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
 	<script src="./js/jquery-2.1.0.min.js"></script>
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/blocs.min.js"></script>
@@ -20,125 +22,76 @@
 	<script src="./js/formHandler.js"></script>
 	<script src="./js/lazysizes.min.js" defer></script>
     <title>Log-In</title>
-
-    
-<!-- Google Analytics -->
- 
-<!-- Google Analytics END -->
-    
-</head>
-<body>
-<!-- Main container -->
-<div class="page-container">
-    
-<!-- bloc-0 -->
-<div class="bloc bgc-davys-grey bg-citysky-overlay b-parallax bloc-bg-texture texture-fabric d-bloc" id="bloc-0">
-	<div class="container bloc-sm">
-		<nav class="navbar row">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/Logo@3x.png" alt="logo" width="50" height="50" />Help Is On The Way</a>
-				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-				</button>
-			</div>
-			<div class="collapse navbar-collapse navbar-1">
-				<ul class="site-navigation nav navbar-nav animated shake-hvr">
-					<li>
-						<a href="log-in.html">Log-In</a>
-					</li>
-					<li>
-						<a href="needs.html">Needs</a>
-					</li>
-					<li>
-						<a href="categories.html">Categories</a>
-					</li>
-					<li>
-						<a href="listings.html">Listings</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</div>
-</div>
-<!-- bloc-0 END -->
-
-<!-- bloc-2 -->
-<div class="bloc bgc-lavender-gray b-parallax bg-valley bloc-bg-texture texture-darken-strong l-bloc" id="bloc-2">
-	<div class="container bloc-lg">
-		<div class="row row-no-gutters">
-			<div class="col-sm-12 col-md-6 col-md-offset-3">
-				<form id="form_8133" novalidate>
-					<h2 class="mg-md text-center">
-						LOG IN
-					</h2>
-					<div class="form-group">
-						<label>
-							email
-						</label>
-						<input class="form-control " type="email" placeholder="enter your email" maxlength="255" required id="input_561" />
-					</div>
-					<div class="form-group">
-						<label>
-							password
-						</label>
-						<input class="form-control " type="password" maxlength="64" placeholder="enter your password" required id="input_2755" />
-					</div>
-					<h3 class="mg-md">
-						<br>
-					</h3>
-					<p>
-						<br>
-					</p>
-					<div class="text-center">
-						<a href="categories.html" class="btn btn-lg btn-rich-electric-blue">Log me in</a>
-					</div>
-					<h3 class="mg-md">
-						<br>
-					</h3><a href="index.html" class="btn btn-davys-grey">I don't have an account</a><a href="index.html" class="btn btn-davys-grey pull-right">Forgot my login details</a>
-				</form>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- bloc-2 END -->
-
-<!-- ScrollToTop Button -->
-<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
-<!-- ScrollToTop Button END-->
-
-
-<!-- Footer - bloc-8 -->
-<div class="bloc bgc-davys-grey bloc-bg-texture texture-fabric d-bloc" id="bloc-8">
-	<div class="container bloc-lg">
-		<div class="row">
-			<div class="col-sm-3">
-				<h3 class="mg-md bloc-mob-center-text">
-					About
-				</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">The team</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Contact us</a>
-			</div>
-			<div class="col-sm-3">
-				<h3 class="mg-md bloc-mob-center-text">
-					Get the App
-				</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">iPhone</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Android</a>
-			</div>
-			<div class="col-sm-3">
-				<h3 class="mg-md bloc-mob-center-text">
-					Follow Us
-				</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">Twitter</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Facebook</a>
-			</div>
-			<div class="col-sm-3">
-				<h3 class="mg-md bloc-mob-center-text">
-					Company
-				</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">Terms of use</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Privacy</a>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- Footer - bloc-8 END -->
-
-</div>
-<!-- Main container END -->
-    
-
-</body>
+   </head>
+   <body>
+      <!-- Main container -->
+      <div class="page-container">
+         <!-- bloc-0 -->
+         <div class="bloc l-bloc bgc-dark-jungle-green" id="bloc-0">
+            <div class="container bloc-sm">
+               <nav class="navbar row">
+                  <div class="navbar-header"><a class="navbar-brand" href="index.html"><img src="img/Logo@3x.png" alt="logo" width="50" height="50" />Help Is On The Way.</a><button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
+                  <div class="collapse navbar-collapse navbar-1">
+                     <ul class="site-navigation nav navbar-nav">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="listings.html">Show Listings</a></li>
+                        <li><a href="needs.html">I Have a Need</a></li>
+                        <li><a href="log-out.html">Log Out</a></li>
+                     </ul>
+                  </div>
+               </nav>
+            </div>
+         </div>
+         <!-- bloc-0 END --><!-- bloc-2 -->
+         <div class="bloc b-parallax bloc-bg-texture texture-geometry-shapes bgc-dark-jungle-green l-bloc" id="bloc-2">
+            <div class="container bloc-lg">
+               <div class="row row-no-gutters">
+                  <div class="col-sm-12 col-md-6 col-md-offset-3">
+                     <form id="form_8133" novalidate>
+                        <h2 class="mg-md text-center">LOG IN</h2>
+                        <div class="form-group">
+                           <h3>email</h3>
+                           <input class="form-control " type="email" placeholder="enter your email" maxlength="255" required id="input_561" />
+                        </div>
+                        <div class="form-group">
+                           <h3>password</h3>
+                           <input class="form-control " type="password" maxlength="64" placeholder="enter your password" required id="input_2755" />
+                        </div>
+                        <h3 class="mg-md"><br></h3>
+                        <p><br></p>
+                        <div class="text-center"><a href="categories.html" class="btn btn-lg animated pulse-hvr btn-rich-electric-blue">Log me in</a></div>
+                        <h3 class="mg-md"><br></h3>
+                        <a href="sign-up.html" class="btn btn-davys-grey animated pulse-hvr">I don't have an account</a><a href="index.html" class="btn btn-davys-grey pull-right animated pulse-hvr">Forgot my login details</a>
+                     </form>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!-- bloc-2 END --><!-- ScrollToTop Button --><a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a><!-- ScrollToTop Button END--><!-- Footer - bloc-16 -->
+         <div class="bloc bloc-bg-texture texture-fabric bgc-dark-jungle-green d-bloc" id="bloc-17">
+            <div class="container bloc-lg">
+               <div class="row">
+                  <div class="col-sm-3">
+                     <h3 class="mg-md bloc-mob-center-text">About</h3>
+                     <a href="our-people.html" class="a-btn a-block bloc-mob-center-text">The team</a><a href="contact-us.html" class="a-btn a-block bloc-mob-center-text">Contact us</a>
+                  </div>
+                  <div class="col-sm-3">
+                     <h3 class="mg-md bloc-mob-center-text">Apps coming soon to</h3>
+                     <a href="index.html" class="a-btn a-block bloc-mob-center-text">iPhone</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Android</a>
+                  </div>
+                  <div class="col-sm-3">
+                     <h3 class="mg-md bloc-mob-center-text">Follow Us</h3>
+                     <a href="https://twitter.com/iamsams" class="a-btn a-block bloc-mob-center-text" target="_blank">Twitter</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Facebook</a>
+                  </div>
+                  <div class="col-sm-3">
+                     <h3 class="mg-md bloc-mob-center-text">Company</h3>
+                     <a href="terms-and-conditions.html" class="a-btn a-block bloc-mob-center-text">Terms of use</a><a href="terms-and-conditions.html" class="a-btn a-block bloc-mob-center-text">Privacy</a>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!-- Footer - bloc-16 END -->
+      </div>
+      <!-- Main container END --> 
+   </body>
 </html>
