--- a/src/main/resources/templates/needs.html
+++ b/src/main/resources/templates/needs.html
@@ -1,153 +1,135 @@
 <!doctype html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <head>
+      <meta charset="utf-8">
+      <meta name="keywords" content="">
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="img/png" href="favicon.png">
-    
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-	<link href='https://fonts.googleapis.com/css?family=Montserrat&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-	  <link rel="stylesheet" href="https://cdn3.devexpress.com/jslib/17.1.7/css/dx.spa.css">
-  <link rel="stylesheet" href="https://cdn3.devexpress.com/jslib/17.1.7/css/dx.common.css">
-  <link rel="stylesheet" href="https://cdn3.devexpress.com/jslib/17.1.7/css/dx.light.css">
-    
-  	<!-- <script src="https://js.devexpress.com/Demos/WidgetsGallery/JSDemos/js/jquery-3.1.0.min.js"></script> -->
-  		<script src="./js/jquery-2.1.0.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	  <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
+      <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	  <link rel="stylesheet" type="text/css" href="./css/style.css">
+      <link rel="stylesheet" type="text/css" href="./css/animate.min.css">
+      <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+      <link rel="stylesheet" type="text/css" href="./css/feather.min.css">
+      <link href='https://fonts.googleapis.com/css?family=Montserrat&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+      <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdn3.devexpress.com/jslib/17.1.7/css/dx.spa.css">
+  		<link rel="stylesheet" href="https://cdn3.devexpress.com/jslib/17.1.7/css/dx.common.css">
+  		<link rel="stylesheet" href="https://cdn3.devexpress.com/jslib/17.1.7/css/dx.light.css">
+	  
+	  <script src="./js/jquery-2.1.0.min.js"></script>
+	  <script src="./js/bootstrap.min.js"></script>
+	  	  <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
 	    <script src="https://cdn3.devexpress.com/jslib/17.1.7/js/dx.all.js"></script>
-	<script src="./js/blocs.min.js"></script>
-	<script src="./js/jqBootstrapValidation.js"></script>
-	<script src="./js/formHandler.js"></script>
-	<script src="./js/lazysizes.min.js" defer></script>
+	  <script src="./js/blocs.min.js"></script>
+	  <script src="./js/jqBootstrapValidation.js"></script>
+	  <script src="./js/formHandler.js"></script>
+	  <script src="./js/lazysizes.min.js" defer></script> 
     <script src="./js/need.js"></script>
-    <title>Needs</title>
-    
-</head>
-<body>
-<!-- Main container -->
-<div class="page-container">
-    
-<!-- bloc-0 -->
-<div class="bloc bgc-davys-grey bg-citysky-overlay b-parallax bloc-bg-texture texture-fabric d-bloc" id="bloc-0">
-	<div class="container bloc-sm">
-		<nav class="navbar row">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/Logo@3x.png" alt="logo" width="50" height="50" />Help Is On The Way</a>
-				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-				</button>
-			</div>
-			<div class="collapse navbar-collapse navbar-1">
-				<ul class="site-navigation nav navbar-nav animated shake-hvr">
-					<li>
-						<a href="log-in.html">Log-In</a>
-					</li>
-					<li>
-						<a href="needs.html">Needs</a>
-					</li>
-					<li>
-						<a href="categories.html">Categories</a>
-					</li>
-					<li>
-						<a href="listings.html">Listings</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</div>
-</div>
-<!-- bloc-0 END -->
-
-<!-- bloc-4 -->
-<div class="bloc bgc-lavender-gray bg-valley bloc-bg-texture texture-darken l-bloc" id="bloc-4">
-	<div class="container bloc-md">
-		<div class="row">
-			<div class="col-sm-6">
-				<img src="img/lazyload-ph.png" data-src="img/Upload%20image.png" class="img-responsive lazyload" />
-	            <div data-bind="dxFileUploader: fileUploaderOptions"></div>
-			</div>
-			<div class="col-sm-6">
-				<form id="form" novalidate>
-					<div class="form-group">
-						<label>
-							Title
-						</label>
-<!-- 						<input class="form-control" maxlength="100" placeholder="Provide a title for your post. Be as clear as you can." required id="input_1014" /> -->
+      <title>Needs</title>
+      <!-- Google Analytics --> <!-- Google Analytics END --> 
+   </head>
+   <body>
+      <!-- Main container -->
+      <div class="page-container">
+         <!-- bloc-0 -->
+         <div class="bloc l-bloc bgc-dark-jungle-green" id="bloc-0">
+            <div class="container bloc-sm">
+               <nav class="navbar row">
+                  <div class="navbar-header"><a class="navbar-brand" href="index.html"><img src="img/Logo@3x.png" alt="logo" width="50" height="50" />Help Is On The Way.</a><button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
+                  <div class="collapse navbar-collapse navbar-1">
+                     <ul class="site-navigation nav navbar-nav">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="listings.html">Show Listings</a></li>
+                        <li><a href="needs.html">I Have a Need</a></li>
+                        <li><a href="log-out.html">Log Out</a></li>
+                     </ul>
+                  </div>
+               </nav>
+            </div>
+         </div>
+         <!-- bloc-0 END --><!-- bloc-3 -->
+         <div class="bloc bgc-dark-jungle-green d-bloc bloc-bg-texture texture-geometry-shapes" id="bloc-3">
+            <div class="container bloc-md">
+               <div class="row">
+                  <div class="col-sm-12">
+                     <h3 class="mg-md blocs-mobile-signup-text  text-center">Upload your need below</h3>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!-- bloc-3 END --><!-- bloc-4 -->
+         <div class="bloc bgc-dark-jungle-green d-bloc bloc-bg-texture texture-geometry-shapes" id="bloc-4">
+            <div class="container bloc-md">
+               <div class="row">
+                  <div class="col-sm-6">
+				  	            <div data-bind="dxFileUploader: fileUploaderOptions"></div>
+                     <p>&nbsp;&nbsp;&nbsp; <br>&nbsp; <br><br></p>
+                     <img src="img/lazyload-ph.png" data-src="img/Upload.png" class="center-block lazyload" width="150" height="150" />
+                     <h5 class="mg-md text-center"><br>Drag &amp; drop your images here to upload</h5>
+                  </div>
+                  <div class="col-sm-6">
+                     <form id="form_7332" novalidate>
+                        <div class="form-group">
+                           <h4>Title</h4>
+                         <!--  <input class="form-control" maxlength="100" placeholder="Provide a title for your post. Be as clear as you can." required id="input_1014" /> -->
     					<div class="form-control" data-bind="dxTextBox: title"></div>
-					</div>
-					<div class="form-group">
-						<label>
-							Description
-						</label>
-<!-- 						<textarea class="form-control" rows="4" cols="50" placeholder="Please describe your requirements in detail. For example, if you need clothes, mention the size, colour and condition" required id="textarea_1749"></textarea> -->
+                        </div>
+                        <div class="form-group">
+                           <h4>Description</h4>
+                           <!-- <textarea class="form-control" rows="2" cols="50" placeholder="Please describe your requirements in detail. For example, if you need clothes, mention the size, colour and condition" required id="textarea_1749"></textarea> -->
           <div data-bind="dxTextArea: textArea"></div>
-					</div>
-					<div class="text-center">
-						<div class="btn-group btn-dropdown">
-							<a href="#" class="btn dropdown-toggle   btn-lg btn-block btn-davys-grey" data-toggle="dropdown" aria-expanded="false">Select a Category<span class="caret"></span></a>
-							<ul class="dropdown-menu" role="menu">
-								<li>
-									<a href="index.html" class="a-btn a-block">Options 1</a>
-								</li>
-								<li>
-									<a href="index.html" class="a-btn a-block">Options 2</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-        			<button type="button" class="btn btn-lg btn-rich-electric-blue pull-right" data-bind="click:submitClick">Submit</button>
-<!-- 					<a href="index.html" class="btn btn-lg btn-rich-electric-blue pull-right">Upload</a>
-					<a href="index.html" class="btn btn-lg pull-left btn-black">Cancel</a> -->
-				</form>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- bloc-4 END -->
-
-<!-- ScrollToTop Button -->
-<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
-<!-- ScrollToTop Button END-->
-
-
-<!-- Footer - bloc-8 -->
-<div class="bloc bgc-davys-grey bloc-bg-texture texture-fabric d-bloc" id="bloc-8">
-	<div class="container bloc-lg">
-		<div class="row">
-			<div class="col-sm-3">
-				<h3 class="mg-md bloc-mob-center-text">
-					About
-				</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">The team</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Contact us</a>
-			</div>
-			<div class="col-sm-3">
-				<h3 class="mg-md bloc-mob-center-text">
-					Get the App
-				</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">iPhone</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Android</a>
-			</div>
-			<div class="col-sm-3">
-				<h3 class="mg-md bloc-mob-center-text">
-					Follow Us
-				</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">Twitter</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Facebook</a>
-			</div>
-			<div class="col-sm-3">
-				<h3 class="mg-md bloc-mob-center-text">
-					Company
-				</h3><a href="index.html" class="a-btn a-block bloc-mob-center-text">Terms of use</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Privacy</a>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- Footer - bloc-8 END -->
-
-</div>
-<!-- Main container END -->
-    
-
-</body>
+                        </div>
+                        <div class="text-center">
+                           <div class="btn-group btn-dropdown">
+                              <a href="#" class="btn dropdown-togglebtn-lg btn-block btn-davys-grey" data-toggle="dropdown" aria-expanded="true">Select a Category<span class="caret"></span></a>
+                              <ul class="dropdown-menu" role="menu">
+                                 <li><a href="index.html" class="a-btn a-block ltc-davys-grey">Clothes</a></li>
+                                 <li><a href="index.html" class="a-btn a-block ltc-davys-grey">Furniture</a></li>
+                              </ul>
+                           </div>
+                        </div>  			
+				  		<button type="button" class="btn btn-lg btn-rich-electric-blue pull-right" data-bind="click:submitClick">Submit</button>
+                      <!--  <a href="index.html" class="btn btn-lg btn-rich-electric-blue pull-right">Upload</a> -->
+						<a href="index.html" class="btn btn-lg pull-left btn-black">Cancel</a>
+                     </form>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!-- bloc-4 END --><!-- bloc-5 -->
+         <div class="bloc bgc-dark-jungle-green d-bloc bloc-bg-texture texture-geometry-shapes" id="bloc-5">
+            <div class="container bloc-lg">
+               <div class="row row-no-gutters l-bloc bgc-dark-jungle-green">
+                  <div class="col-sm-12"></div>
+               </div>
+            </div>
+         </div>
+         <!-- bloc-5 END --><!-- ScrollToTop Button --><a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a><!-- ScrollToTop Button END--><!-- Footer - bloc-17 -->
+         <div class="bloc bloc-bg-texture texture-fabric bgc-dark-jungle-green d-bloc" id="bloc-17">
+            <div class="container bloc-lg">
+               <div class="row">
+                  <div class="col-sm-3">
+                     <h3 class="mg-md bloc-mob-center-text">About</h3>
+                     <a href="our-people.html" class="a-btn a-block bloc-mob-center-text">The team</a><a href="contact-us.html" class="a-btn a-block bloc-mob-center-text">Contact us</a>
+                  </div>
+                  <div class="col-sm-3">
+                     <h3 class="mg-md bloc-mob-center-text">Apps coming soon to</h3>
+                     <a href="index.html" class="a-btn a-block bloc-mob-center-text">iPhone</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Android</a>
+                  </div>
+                  <div class="col-sm-3">
+                     <h3 class="mg-md bloc-mob-center-text">Follow Us</h3>
+                     <a href="https://twitter.com/iamsams" class="a-btn a-block bloc-mob-center-text" target="_blank">Twitter</a><a href="index.html" class="a-btn a-block bloc-mob-center-text">Facebook</a>
+                  </div>
+                  <div class="col-sm-3">
+                     <h3 class="mg-md bloc-mob-center-text">Company</h3>
+                     <a href="terms-and-conditions.html" class="a-btn a-block bloc-mob-center-text">Terms of use</a><a href="terms-and-conditions.html" class="a-btn a-block bloc-mob-center-text">Privacy</a>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!-- Footer - bloc-17 END -->
+      </div>
+      <!-- Main container END --> 
+   </body>
 </html>
